# trustops-rag

./: .gitattributes  .gitignore  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  README.md  ROADMAP.md  SPEC.md  STACK.md  pyproject.toml
docs/: README.md
docs/adr/: README.md
frontend/: README.md
infra/: README.md
src/trustops_rag/: __init__.py
src/trustops_rag/api/: app.py  ask.py  schemas.py
src/trustops_rag/application/: ask.py
src/trustops_rag/domain/: __init__.py  context_building.py  decision_engine.py  entities.py  human_review.py  ingestion.py  observability.py  query_understanding.py  reliability.py  repositories.py  reranking.py  retrieval.py  runtime.py  security.py  unit_of_work.py  value_objects.py
src/trustops_rag/infrastructure/: bootstrap.py  errors.py  query_repository.py  settings.py
src/trustops_rag/workers/: __init__.py  review_payloads.py  review_validation.py  review_worker.py
tests/: README.md
tests/unit/: test_domain_reliability.py  test_domain_reranking.py  test_infrastructure_bootstrap.py  test_infrastructure_query_repository.py  test_workers_review_worker.py
