[project]
name = "trustops-rag"
version = "0.1.0"
description = "Risk-aware enterprise RAG platform"
authors = [{ name = "Local Workspace", email = "emilly@octin.com" }]
requires-python = ">=3.11,<3.14"
dynamic = ["dependencies"]

[tool.poetry]
packages = [{ include = "trustops_rag", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "^0.136.1"
pydantic-settings = "^2.14.0"
uvicorn = "^0.46.0"
gunicorn = "^25.3.0"
sqlalchemy = "^2.0.49"
alembic = "^1.18.4"
psycopg = {extras = ["binary"], version = "^3.3.3"}
pgvector = "^0.4.2"
redis = "^7.4.0"
celery = "^5.6.3"
httpx = "^0.28.1"
python-multipart = "^0.0.27"
structlog = "^25.5.0"
minio = "^7.2.20"
openai = "^2.33.0"
ollama = "^0.6.1"
pymupdf = "^1.27.2.3"
markdown-it-py = "^4.0.0"
rank-bm25 = "^0.2.2"
numpy = "^2.4.4"
pandas = "^3.0.2"
scikit-learn = "^1.8.0"
slowapi = "^0.1.9"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
presidio-analyzer = "^2.2.362"
presidio-anonymizer = "^2.2.362"
prometheus-client = "^0.25.0"
opentelemetry-api = "^1.41.1"
opentelemetry-sdk = "^1.41.1"
opentelemetry-instrumentation-fastapi = "^0.62b1"
opentelemetry-instrumentation-sqlalchemy = "^0.62b1"
opentelemetry-instrumentation-redis = "^0.62b1"
sentence-transformers = "^5.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.1.0"
ruff = "^0.15.12"
mypy = "^1.20.2"
locust = "^2.43.4"
schemathesis = "^4.16.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
